--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -42,7 +42,8 @@
           <li><a href="index.html" >Home</a></li>
           <li><a href="about.html" class="active">About</a></li>
           <li><a href="resume.html">Education</a></li>
-          <li><a href="services.html">Projects</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="portfolio.html">Projects</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
