--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -86,15 +86,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/hospital2.PNG" alt="">
+                  <img src="assets/img/portfolio/blog.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/hospital3.PNG" alt="">
+                  <img src="assets/img/portfolio/blog_signin.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/hospital4.PNG" alt="">
+                  <img src="assets/img/portfolio/blog_signup.PNG" alt="">
                 </div>
 
                 
@@ -108,9 +108,9 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Project Name</strong>: Hospital Management</li>
+                <li><strong>Project Name</strong>: Blog</li>
                 <li><strong>Stack</strong>: Django, Bootstrap</li>
-                <li><strong>Project Source Code</strong>: <a href="https://github.com/lesmadeit/hospital-management">Hospital-management-link</a></li>
+                <li><strong>Project Source Code</strong>: <a href="https://github.com/lesmadeit/blog">blog-link</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
