--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio</title>
+  <title>Contact</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -175,9 +175,8 @@
   <footer id="footer" class="footer dark-background">
     <div class="container">
       <h3 class="sitename">Portfolio</h3>
-      <p>This is my portfolio.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/leslie-mwendwa-82109a22b"><i class="bi bi-linkedin"></i></a>
       </div>
       
     </div>
