--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -45,7 +45,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Projects</a></li>
+          <li><a href="portfolio.html" class="active">Projects</a></li>
          
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -108,15 +108,15 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Project Name</strong>: Hospital Management</li>
+                <li><strong>Project Name</strong>: Hospital Management System</li>
                 <li><strong>Stack</strong>: Django, Bootstrap</li>
                 <li><strong>Project Source Code</strong>: <a href="https://github.com/lesmadeit/hospital-management">Hospital-management-link</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
+              <h2>Hospital Management System</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                 A simple Hospital Management system made with Django for the back-end and Bootstrap for the front-end.
               </p>
             </div>
           </div>
