--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -45,7 +45,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Projects</a></li>
+          <li><a href="portfolio.html" class="active">Projects</a></li>
          
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -114,9 +114,9 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
+              <h2>Blog</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                A simple Blog made with Django for the back-end and Bootstrap for the front-end.
               </p>
             </div>
           </div>
