--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div class="container col-sm-6 m-2" data-aos="zoom-out" data-aos-delay="100">
           <h2>Leslie Mwendwa</h2>
-          <p>Hi👋. I am a Web Developer. This is a portfolio of my projects.</p>
+          <p>Hi👋. I am a Web Developer. Welcome to my portfolio.</p>
           <div class="social-links">
             <a href="https://x.com/lesmadeit"><i class="bi bi-twitter-x"></i></a>
             <a href="https://www.facebook.com/youngleslee"><i class="bi bi-facebook"></i></a>
