--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 </head>
-
+<br><br><br><br>
 <body class="about-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
@@ -62,12 +62,12 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile2.png" class="img-fluid image2" alt="">
+            <img src="assets/img/profile.png" class="img-fluid image2" style="height: 100%;" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2> Web Developer.</h2>
-            <p class="fst-italic py-3">
-              I am Leslie Mwendwa, a website developer from Kenya. I am currently located in Nairobi city. I have been to
+            <h2> Bio.</h2>
+            <p>
+              I am Leslie Mwendwa, a fullstack web developer from Kenya. I am currently located in Nairobi city. I have been to
               various tech hackathons and doing coding challenges to constantly develop my coding skills. LeetCode and 
               Hackerrank have been my go to websites for self improvement. My current tech stack is Django, Bootstrap and
               a bit of ReactJS.
@@ -77,6 +77,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+254714442664</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Nairobi, Kenya</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong> <a href="https://github.com/lesmadeit">Link to my github </a></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -145,7 +146,7 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Python</span> <i class="val">90%</i></span>
+              <span class="skill"><span>Django</span> <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
