--- a/bus_details.html
+++ b/bus_details.html
@@ -122,7 +122,7 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Library Management System</h2>
+              <h2>Bus Reservation System</h2>
               <p>
                 A simple Bus Reservation system made with Django for the back-end and Bootstrap for the front-end.
               </p>
