--- a/school_details.html
+++ b/school_details.html
@@ -88,19 +88,27 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                    <img src="assets/img/portfolio/bus/bus2.PNG" alt="">
+                    <img src="assets/img/portfolio/school/school2.PNG" alt="">
                   </div>
   
                   <div class="swiper-slide">
-                    <img src="assets/img/portfolio/bus/bus3.PNG" alt="">
+                    <img src="assets/img/portfolio//school/school3.PNG" alt="">
                   </div>
   
                   <div class="swiper-slide">
-                    <img src="assets/img/portfolio/bus/bus4.PNG" alt="">
+                    <img src="assets/img/portfolio/school/school4.PNG" alt="">
                   </div>
 
                   <div class="swiper-slide">
-                    <img src="assets/img/portfolio/bus/bus5.PNG" alt="">
+                    <img src="assets/img/portfolio/school/teacher.PNG" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/portfolio/school/adminteacher.PNG" alt="">
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="assets/img/portfolio/school/adminhomepage.PNG" alt="">
                   </div>
 
                 
@@ -118,13 +126,13 @@
               <ul>
                 <li><strong>Project Name</strong>: Library Management System</li>
                 <li><strong>Stack</strong>: Django, Bootstrap</li>
-                <li><strong>Project Source Code</strong>: <a href="https://github.com/lesmadeit/bus_reservation">Bus Reservation link</a></li>
+                <li><strong>Project Source Code</strong>: <a href="https://github.com/lesmadeit/schoolmanagement">School Management</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Library Management System</h2>
+              <h2>School Management System</h2>
               <p>
-                A simple Bus Reservation system made with Django for the back-end and Bootstrap for the front-end.
+                A simple School Management system made with Django for the back-end and Bootstrap for the front-end.
               </p>
             </div>
           </div>
