--- a/portfolio.html
+++ b/portfolio.html
@@ -146,7 +146,7 @@
                   <h4>Bus Booking</h4>
                   
                   <a href="assets/img/portfolio/bus/bus.PNG" title="Bus Booking System" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details5.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="bus_details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -159,7 +159,7 @@
                   <h4>School Management System</h4>
                   
                   <a href="assets/img/portfolio/school/school1.PNG" title="School Management System" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details6.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="school_details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
