--- a/portfolio.html
+++ b/portfolio.html
@@ -165,6 +165,20 @@
             </div><!-- End Portfolio Item -->
 
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/teletherapy/home.PNG" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Teletherapy Website</h4>
+                  
+                  <a href="assets/img/portfolio/teletherapy/home.PNG" title="Teletherapy Website" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="teletherapy_details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+
+
           </div><!-- End Portfolio Container -->
 
         </div>
