--- a/login_details.html
+++ b/login_details.html
@@ -88,15 +88,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                    <img src="assets/img/portfolio/teletherapy/home.PNG" alt="">
+                    <img src="assets/img/portfolio/login/home.PNG" alt="">
                   </div>
   
                   <div class="swiper-slide">
-                    <img src="assets/img/portfolio/teletherapy/chat.PNG" alt="">
+                    <img src="assets/img/portfolio/login/Capture.PNG" alt="">
                   </div>
   
                   <div class="swiper-slide">
-                    <img src="assets/img/portfolio/teletherapy/Capture.PNG" alt="">
+                    <img src="assets/img/portfolio/login/register.PNG" alt="">
                   </div>
 
 
@@ -113,7 +113,7 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Project Name</strong>: Teletherapy Website</li>
+                <li><strong>Project Name</strong>: Login and Registration</li>
                 <li><strong>Stack</strong>: Django, Bootstrap</li>
                 <li><strong>Project Source Code</strong>: <a href="https://github.com/lesmadeit/teletherapy">Teletherapy Website</a></li>
               </ul>
