--- a/library_details.html
+++ b/library_details.html
@@ -139,13 +139,16 @@
     </section><!-- /Portfolio Details Section -->
 
   </main>
+  <br><br><br> 
 
   <footer id="footer" class="footer dark-background">
     <div class="container">
-      <h3 class="sitename">Portfolio</h3>
-      <p>This is my portfolio.</p>
+      
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://x.com/lesmadeit"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.facebook.com/youngleslee"><i class="bi bi-facebook"></i></a>
+        <a href="https://instagram.com/lesmadeit"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/leslie-mwendwa-82109a22b/"><i class="bi bi-linkedin"></i></a>
       </div>
       
     </div>
