--- a/login_details.html
+++ b/login_details.html
@@ -113,15 +113,15 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Project Name</strong>: Login and Registration</li>
+                <li><strong>Project Name</strong>: Login and Registration System</li>
                 <li><strong>Stack</strong>: Django, Bootstrap</li>
-                <li><strong>Project Source Code</strong>: <a href="https://github.com/lesmadeit/teletherapy">Teletherapy Website</a></li>
+                <li><strong>Project Source Code</strong>: <a href="https://github.com/lesmadeit/loginregistration">Login and Registration System</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Teletherapy Website</h2>
+              <h2>Login and Registration System</h2>
               <p>
-                A teletherapy website made with React for the frontend, Node.js with Express.js for the backend and Azure OpenAI Chatbot .
+                A Login and Registration System made with Bootstrap for the frontend and Django for the backend.
               </p>
             </div>
           </div>
@@ -133,13 +133,16 @@
     </section><!-- /Portfolio Details Section -->
 
   </main>
+  <br><br><br>
 
   <footer id="footer" class="footer dark-background">
     <div class="container">
-      <h3 class="sitename">Portfolio</h3>
-      <p>This is my portfolio.</p>
+      
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://x.com/lesmadeit"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.facebook.com/youngleslee"><i class="bi bi-facebook"></i></a>
+        <a href="https://instagram.com/lesmadeit"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/leslie-mwendwa-82109a22b/"><i class="bi bi-linkedin"></i></a>
       </div>
       
     </div>
