--- a/portfolio.html
+++ b/portfolio.html
@@ -185,7 +185,7 @@
                   <h4>Login and Registration System</h4>
                   
                   <a href="assets/img/portfolio/login/home.PNG" title="Login and Registration System" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="teletherapy_details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="login_details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
