--- a/bus_details.html
+++ b/bus_details.html
@@ -116,7 +116,7 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Project Name</strong>: Library Management System</li>
+                <li><strong>Project Name</strong>: Bus Reservation System</li>
                 <li><strong>Stack</strong>: Django, Bootstrap</li>
                 <li><strong>Project Source Code</strong>: <a href="https://github.com/lesmadeit/bus_reservation">Bus Reservation link</a></li>
               </ul>
