--- a/blog_details.html
+++ b/blog_details.html
@@ -111,7 +111,7 @@
               <ul>
                 <li><strong>Project Name</strong>: Blog</li>
                 <li><strong>Stack</strong>: Django, Bootstrap</li>
-                <li><strong>Project Source Code</strong>: <a href="https://github.com/lesmadeit/blog">blog-link</a></li>
+                <li><strong>Link to project</strong>: <a href="https://blogg-v096.onrender.com/">blog-link</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
