--- a/teletherapy_details.html
+++ b/teletherapy_details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio Details - Personal Bootstrap Template</title>
+  <title>Portfolio Details</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -115,7 +115,7 @@
               <ul>
                 <li><strong>Project Name</strong>: Teletherapy Website</li>
                 <li><strong>Stack</strong>: Django, Bootstrap</li>
-                <li><strong>Project Source Code</strong>: <a href="https://github.com/lesmadeit/teletherapy">Teletherapy Website</a></li>
+                <li><strong>Link to project</strong>: <a href="https://teletherapy.onrender.com/">Teletherapy Website</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
