--- a/library_details.html
+++ b/library_details.html
@@ -37,7 +37,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1 class="sitename">Personal</h1>
+        <h1 class="sitename">Library Management</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
