--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -36,7 +36,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1 class="sitename">Personal</h1>
+        <h1 class="sitename">Travel Management System</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
