--- a/school_details.html
+++ b/school_details.html
@@ -38,7 +38,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1 class="sitename">Personal</h1>
+        <h1 class="sitename">School Management System</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -124,7 +124,7 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Project Name</strong>: Library Management System</li>
+                <li><strong>Project Name</strong>: School Management System</li>
                 <li><strong>Stack</strong>: Django, Bootstrap</li>
                 <li><strong>Project Source Code</strong>: <a href="https://github.com/lesmadeit/schoolmanagement">School Management</a></li>
               </ul>
