--- a/teletherapy_details.html
+++ b/teletherapy_details.html
@@ -38,7 +38,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1 class="sitename">Personal</h1>
+        <h1 class="sitename">Teletherapy</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
