--- a/starter-page.html
+++ b/starter-page.html
@@ -46,7 +46,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="services.html">Projects</a></li>
+          <li><a href="services.html">Portfolio</a></li>
          
           <li><a href="contact.html">Contact</a></li>
         </ul>
