--- a/teletherapy_details.html
+++ b/teletherapy_details.html
@@ -115,7 +115,7 @@
               <ul>
                 <li><strong>Project Name</strong>: Teletherapy Website</li>
                 <li><strong>Stack</strong>: Django, Bootstrap</li>
-                <li><strong>Link to project</strong>: <a href="https://teletherapy.onrender.com/">Teletherapy Website</a></li>
+                <li><strong>Link to project</strong>: <a href="https://teletherapy.onrender.com/">teletherapy.onrender.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
