--- a/teletherapy_details.html
+++ b/teletherapy_details.html
@@ -114,7 +114,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Project Name</strong>: Teletherapy Website</li>
-                <li><strong>Stack</strong>: Django, Bootstrap</li>
+                <li><strong>Stack</strong>: React, Node</li>
                 <li><strong>Link to project</strong>: <a href="https://teletherapy.onrender.com/">teletherapy.onrender.com</a></li>
               </ul>
             </div>
