--- a/portfolio.html
+++ b/portfolio.html
@@ -198,7 +198,7 @@
                   <h4>Twiga Movers</h4>
                   
                   <a href="assets/img/portfolio/twiga/home.PNG" title="Login and Registration System" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="login_details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="twiga_details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
