--- a/twiga_details.html
+++ b/twiga_details.html
@@ -87,24 +87,22 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/library/library2.PNG" alt="">
+                  <img src="assets/img/portfolio/twiga/home.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/library/library2.PNG" alt="">
+                  <img src="assets/img/portfolio/twiga/about.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/library/library3.PNG" alt="">
+                  <img src=assets/img/portfolio/twiga/contact.PNG alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/library/library4.PNG" alt="">
+                  <img src="assets/img/portfolio/twiga/areas.PNG" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/library/library5.PNG" alt="">
-                </div>
+        
 
                 
 
