--- a/portfolio.html
+++ b/portfolio.html
@@ -197,7 +197,7 @@
                 <div class="portfolio-info">
                   <h4>Twiga Movers</h4>
                   
-                  <a href="assets/img/portfolio/twiga/home.PNG" title="Login and Registration System" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/twiga/home.PNG" title="Twiga Movers" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="twiga_details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
