--- a/hospital_details.html
+++ b/hospital_details.html
@@ -119,7 +119,7 @@
               <ul>
                 <li><strong>Project Name</strong>: Hospital Management System</li>
                 <li><strong>Stack</strong>: Django, Bootstrap</li>
-                <li><strong>Project Source Code</strong>: <a href="https://github.com/lesmadeit/hospital-management">Hospital-management-link</a></li>
+                <li><strong>Project Source Code</strong>: <a href="https://medicare-hospital.onrender.com">/medicare-hospital.onrender.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
