--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio</title>
+  <title>Leslie Mwendwa</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -77,7 +77,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+254714442664</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Nairobi, Kenya</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong> <a href="https://github.com/lesmadeit">Link to my github </a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong> <a href="https://github.com/lesmadeit">github.com/lesmadeit</a></li>
                 </ul>
               </div>
               <div class="col-lg-6">
