--- a/about.html
+++ b/about.html
@@ -33,7 +33,9 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      
+      <a href="templates/home/index.html" class="logo d-flex align-items-center">
+        <h1 class="sitename"></h1>
+      </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
