--- a/bus_details.html
+++ b/bus_details.html
@@ -118,7 +118,7 @@
               <ul>
                 <li><strong>Project Name</strong>: Bus Reservation System</li>
                 <li><strong>Stack</strong>: Django, Bootstrap</li>
-                <li><strong>Project Source Code</strong>: <a href="https://github.com/lesmadeit/bus_reservation">Bus Reservation link</a></li>
+                <li><strong>Project Source Code</strong>: <a href="https://swiftbus.onrender.com">swiftbus.onrender.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
