--- a/school_details.html
+++ b/school_details.html
@@ -126,7 +126,7 @@
               <ul>
                 <li><strong>Project Name</strong>: School Management System</li>
                 <li><strong>Stack</strong>: Django, Bootstrap</li>
-                <li><strong>Project Source Code</strong>: <a href="https://github.com/lesmadeit/schoolmanagement">School Management</a></li>
+                <li><strong>Project Source Code</strong>: <a href="https://elimuschool.onrender.com/">elimuschool.onrender.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
